# xdf-processor

./: .gitignore  README.md  pyproject.toml
src/xdf2bids/: __init__.py  __main__.py  main.py  utils.py  xdf_processor.py
xdf2bids/: pyproject.toml
xdf2bids/src/: __init__.py  __main__.py  xdf_processor.py
