[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xdf2bids"
version = "1.0.0"
description = "Convert XDF files to BIDS format using shared xdf_core components"
authors = [{name = "Janik Pawlowski"}]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "xdf-core>=1.0.0",
    "numpy>=1.19.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
gui = [
    "PyQt5>=5.15.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.scripts]
xdf2bids = "xdf2bids.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
